# principia-agentica

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  hello.py  justfile  opencode.md  pyproject.toml  requirements.txt
articles/032226-optipfair/: comment_from_pere.md  entrevista.txt  optipfair_llm_reference_manual.txt  optipfair_series_2.ipynb
articles/091925-memory-in-agents/: optipfair_series_1.ipynb
experiments/: run_email_agent.py  test.py
experiments/email_agent/: README.md  agent.py  graph.py  hooks.py  init.py  memory.py  profile.py  prompts.py  tools.py  triage.py
patterns/: README.md
patterns/01_prompt_chaining/: README.md  REAME.md
patterns/01_prompt_chaining/langgraph_functional_impl/: __init__.py
patterns/01_prompt_chaining/langgraph_impl/: __init__.py  app.py
patterns/prompt_chaining/: __init__.py
patterns/prompt_chaining/01_prompt_chaining/langgraph_functional_impl/: functional_app.py
patterns/prompt_chaining/langgraph_functional_impl/: app.py
patterns/prompt_chaining/langgraph_impl/: app.py
patterns/utils/: models.py  nodes.py  prompts.py  schemas.py
publication/: mkdocs.yml
publication/docs/: about.es.md  about.md  contact.es.md  contact.md  index.es.md  index.md  test.md
publication/docs/blog/posts/: 032226-healing-the-golden-scar-optipfair.md  (+3 more)
publication/docs/stylesheets/: extra.css
tests/: conftest.py
tests/patterns/01_prompt_chaining/: test_langgraph_functional_impl.py  test_langgraph_impl.py
tests/patterns/prompt_chaining/: test_langgraph_functional_impl.py  test_langgraph_impl.py
