[project]
name = "principia-agentica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.6.6",
    "mkdocs-material>=9.6.19",
    "langchain-google-genai",
    "typer>=0.17.4",
    "python-dotenv>=1.1.1",
    "langchain>=0.3.27",
]

[project.optional-dependencies]
dev = [
    # Dependencias de desarrollo como 'ruff', 'pytest', 'jupyter'
    "ruff",
    "pytest",
    "jupyterlab",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]
