[project]
name = "principia-agentica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.6.6",
    "mkdocs-material>=9.6.19",
    "mkdocs-pagelist-plugin>=0.2.2",
    "mkdocs-static-i18n[material]>=1.3.0",
]
